fix css transitions on ios.

--- a/src/main/resources/scss/_transitions.scss
+++ b/src/main/resources/scss/_transitions.scss
@@ -40,9 +40,10 @@
 
 .loginforms-enter {
 	opacity: 0.01;
-	transition: all .25s;
+	transition: -webkit-transform .25s, opacity .25s;
 	transition-timing-function: ease-out;
 	width:100%;
+	top: 0;
 	position: absolute;
 	@include transform(translate3d(0,-1rem,0));
 }
@@ -56,9 +57,10 @@
 
 .loginforms-leave {
 	opacity: 1;
-	transition: all .25s;
+	transition: -webkit-transform .25s, opacity .25s;
 	transition-timing-function: ease-out;
 	width:100%;
+	top: 0;
 	position: absolute;
 	@include transform(translate3d(0,0,0));
 }
@@ -71,7 +73,7 @@
 }
 
 .loginforms {
-	transition: all .25s;
+	transition: -webkit-transform .25s, opacity .25s;
 	transition-timing-function: ease-out;
 }
 
